{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 85,
  "lineage": "c3afbf83-80b6-9b10-306c-c6d0cafa73fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:521996293513:instance/i-0fc3aa51a25690099",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fc3aa51a25690099",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ae42502adb6f985b",
            "private_dns": "ip-10-0-0-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.156",
            "public_ip": "52.91.7.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-011ae3f4e1a5058e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ee976cfe3345f4e",
            "tags": {
              "Name": "docker_instance"
            },
            "tags_all": {
              "Name": "docker_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05a70c1eb3e19aa12"
            ]
          },
          "dependencies": [
            "aws_security_group.dock_sg",
            "aws_subnet.dock_subnet",
            "aws_vpc.dock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dock_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521996293513:internet-gateway/igw-02a442d02c0f6380f",
            "id": "igw-02a442d02c0f6380f",
            "owner_id": "521996293513",
            "vpc_id": "vpc-0b61501cd30cc4234"
          },
          "dependencies": [
            "aws_vpc.dock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dock_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521996293513:route-table/rtb-09d700fdf80a02cb5",
            "id": "rtb-09d700fdf80a02cb5",
            "owner_id": "521996293513",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a442d02c0f6380f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dock_route_table"
            },
            "tags_all": {
              "Name": "dock_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b61501cd30cc4234"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dock_igw",
            "aws_vpc.dock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dock_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdb62c4762aad11d",
            "route_table_id": "rtb-09d700fdf80a02cb5",
            "subnet_id": "subnet-05ee976cfe3345f4e"
          },
          "dependencies": [
            "aws_internet_gateway.dock_igw",
            "aws_route_table.dock_route_table",
            "aws_subnet.dock_subnet",
            "aws_vpc.dock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dock_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521996293513:security-group/sg-05a70c1eb3e19aa12",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a70c1eb3e19aa12",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all TCP",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20221123130055063100000001",
            "name_prefix": "terraform-",
            "owner_id": "521996293513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dock_sg"
            },
            "tags_all": {
              "Name": "dock_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b61501cd30cc4234"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.dock_subnet",
            "aws_vpc.dock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dock_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521996293513:subnet/subnet-05ee976cfe3345f4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ee976cfe3345f4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "521996293513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dock_subnet"
            },
            "tags_all": {
              "Name": "dock_subnet"
            },
            "vpc_id": "vpc-0b61501cd30cc4234"
          },
          "dependencies": [
            "aws_vpc.dock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dock_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521996293513:vpc/vpc-0b61501cd30cc4234",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e19e807ae545852b",
            "default_route_table_id": "rtb-0018c7c73f287fa13",
            "default_security_group_id": "sg-08f11689ff5ad3d6b",
            "dhcp_options_id": "dopt-0d94647a31839d8f9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b61501cd30cc4234",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0018c7c73f287fa13",
            "owner_id": "521996293513",
            "tags": {
              "Name": "dock_vpc"
            },
            "tags_all": {
              "Name": "dock_vpc"
            }
          }
        }
      ]
    }
  ]
}